Bug 15908 - uninitialized read leads to hanging rpcd_spoolss
Summary: uninitialized read leads to hanging rpcd_spoolss
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: 4.23.0rc4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-09 08:27 UTC by Björn Baumbach
Modified: 2025-09-12 08:29 UTC (History)
1 user (show)

See Also:


Attachments
fix for 4.23, cherry-picked from master (1.15 KB, patch)
2025-09-09 11:30 UTC, Björn Baumbach
bbaumbach: review+
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Baumbach 2025-09-09 08:27:39 UTC
Beginning with version 4.23 printing might hang and e.g. smbspool might result in NT_STATUS_IO_TIMEOUT. rpcd_spoolss processes are accumulating.

Have patch need bug number.
Comment 1 Samba QA Contact 2025-09-09 11:07:03 UTC
This bug was referenced in samba master:

a6dcf78483d7ae492e695d30c5c783df8e7879d8
Comment 2 Björn Baumbach 2025-09-09 11:30:20 UTC
Created attachment 18712 [details]
fix for 4.23, cherry-picked from master
Comment 3 Jule Anger 2025-09-09 15:57:54 UTC
Pushed to autobuild-v4-23-test.
Comment 4 Samba QA Contact 2025-09-11 10:18:03 UTC
This bug was referenced in samba v4-23-test:

eb9a6f40d14da11c94ef5debf047eb95ed74f328
Comment 5 Jule Anger 2025-09-11 10:26:49 UTC
Closing out bug report.

Thanks!
Comment 6 Samba QA Contact 2025-09-12 08:29:37 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.0):

eb9a6f40d14da11c94ef5debf047eb95ed74f328